# drive-cleaner

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  disk_usage.html  index.html  package-lock.json  package.json  project.html  scanning.html  vite.config.ts
design/: config.html  dashboard.html  file-analysis.html  temp-cleaner.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/commands/: browse.rs  disk_usage.rs  empty_folders.rs  export.rs  file_types.rs  large_files.rs  mod.rs  old_files.rs  preview.rs  scan.rs  temp_cleaner.rs
src/components/: BrowseView.tsx  DiskUsageView.tsx  DuplicatesView.tsx  EmptyFoldersView.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FileTypesView.tsx  Header.tsx  LargeFilesView.tsx  MainContent.tsx  OldFilesView.tsx  PreviewModal.tsx  QuickActions.test.tsx  QuickActions.tsx  StatusBar.test.tsx  StatusBar.tsx  TempCleanerView.tsx  Toolbar.tsx
src/components/layout/: BottomNav.test.tsx  BottomNav.tsx  HudHeader.test.tsx  HudHeader.tsx
src/hooks/: useDiskUsage.ts  useEmptyFolders.ts  useFileBrowser.ts  useFileTypes.ts  useLargeFiles.ts  useOldFiles.ts  useScan.ts  useScanActions.test.ts  useScanActions.ts  useTempCleaner.ts
src/i18n/: messages.ts
src/lib/: quickActions.test.ts  quickActions.ts  tauri.ts  toastContext.tsx  utils.test.ts  utils.ts
src/test/: setup.ts
src/types/: index.ts
