[package]
name = "drive-cleaner"
version = "0.1.0"
description = "Drive Cleaner — Duplicate File Finder & Disk Cleanup"
authors = ["rsn1224"]
edition = "2021"

[lib]
name = "drive_cleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1.5"
jwalk = "0.8"
rayon = "1.10"
csv = "1.3"
base64 = "0.22"
chrono = "0.4"
dirs = "5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
